# BalancingRobotZ

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md  build.sh
app/: CMakeLists.txt  app.overlay  pinctrl.dtsi  pm_static_nrf52840dongle_nrf52840.yml  prj.conf
app/src/: CMakeLists.txt  main.c  main.cpp
app/src/ahrs/: AHRS.cpp  AHRS.h  CMakeLists.txt  MadgwickAHRS.cpp  MadgwickAHRS.h  MahonyAHRS.cpp  MahonyAHRS.h  SimpleAHRS.cpp  SimpleAHRS.h
app/src/app_demux/: CMakeLists.txt  app_demux.cpp  app_demux.h
app/src/bt/: CMakeLists.txt  ble_svcs.cpp  ble_svcs.h
app/src/datalog/: CMakeLists.txt  datalog.cpp  datalog.h
app/src/flash/: CMakeLists.txt
app/src/imu/: CMakeLists.txt  imu.cpp  imu.h  imu_cal.h  imu_cmd.h  imu_hw.h
app/src/include/: ble_cfg.h  logdef.h  notify.h  param_store_ids.h  pid_num.h  thread.h
app/src/motor/: CMakeLists.txt  motor.cpp  motor.h  motor_cfg.h  motorcmd.h
app/src/param_store/: param_store.h
app/src/perf/: CMakeLists.txt  perf.cpp  perf.h
app/src/pid/: PIDCmd.h  pid.h
app/src/qdec/: CMakeLists.txt  notes.txt  qdec.cpp  qdec.h
boards/shields/adafruit_lsm6ds3_lis3mdl/: Kconfig.shield  adafruit_lsm6ds3_lis3mdl.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.nrfx  i2c_nrfx_twi.c
drivers/sensor/: Kconfig
drivers/sensor/lis3mdlz/: CMakeLists.txt  Kconfig  lis3mdl.c  lis3mdl.h  lis3mdl_trigger.c
drivers/sensor/lsm6ds3tr-c/: CMakeLists.txt  Kconfig  lsm6ds3tr-c.c  lsm6ds3tr-c.h
drivers/sensor/qdec_nrfx/: Kconfig  qdec_nrfx.c  qdec_pinctrl.h
dts/bindings/: nordic,nrf-qdecz.yaml  st,lis3mdlz-magn.yaml  st,lsm6ds3tr-c-common.yaml  st,lsm6ds3tr-c-i2c.yaml
